--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ App Version Authority: js/version.js
 Prime Pass: File 1 of 24
 Prev: (none)
 Next: sw.js
-FileEditId: 1
+FileEditId: 2
 Edited: 2026-01-21
 
 Role / Ownership
@@ -268,14 +268,18 @@ App Version Authority: js/version.js
 Prime Pass: File 1 of 24
 Prev: (none)
 Next: sw.js
-FileEditId: 1
+FileEditId: 2
 Edited: 2026-01-21
 
-Exports / Public Surface
-- DOM IDs + structure consumed by all modules
+Implementation Fetch Directive (ONE-TIME ONLY; NOT A MASTER ORDER)
+ImplementationId: PP-20260121-001
+Meaning:
+- This block exists ONLY to tell the human operator which file to paste NEXT during this one implementation run.
+- This is NOT an instruction set, NOT a schema, and NOT an ordering guarantee.
+- Future AI must IGNORE this block entirely except as historical log text.
 
-Events
-- None emitted here by design
+Current file (pasted/edited in this step): index.html
+Next file to fetch/paste for THIS implementation run: sw.js
 
 Acceptance checks
 - App boots; version renders on Home + Settings; Settings med list UI renders; panel IDs unchanged.
